--- a/ASEBook/src/styles/Profil.css
+++ b/ASEBook/src/styles/Profil.css
@@ -99,3 +99,39 @@
     border-radius: 5px;
     margin: 5px;
 }
+
+@media only screen and (max-width: 600px) {
+    .main-container-Profil {
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px;
+    }
+    
+    .container-Preferinte,
+    .container-Profil {
+        padding: 10px;
+        width: 100%;
+    }
+  
+    .container-descriere-Profil {
+        padding: 20px;
+    }
+  
+    .container-Imagine-Deconectare-Profil {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+    
+    .imagine-profil {
+        width: 80px;
+        height: 80px;
+    }
+    
+    .container-schimbare-parola {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+  }
+  
+  
